--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,13 +1,23 @@
-<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> blog-post" itemscope itemprop="blogPost">
+<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> blog-post" itemscope itemtype="http://schema.org/Article">
 					<header class="article-header"><%- partial('post/title', {class_name: 'article-title'}) %></header>
 				<div class="article-meta blog-post-meta">
 					<%- partial('post/date', {class_name: 'article-date', date_format: config.date_format, time_format: config.time_format}) %><% if (post.author){ %>
-					<div class="article-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
-						<span itemprop="name"><%= post.author %></span>
+					<div class="article-author"><span itemprop="author" itemscope itemtype="http://schema.org/Person">
+						<span itemprop="name" content="<%= config.author %>"></span></span>
+							<span itemtype="https://schema.org/Organization" itemscope="itemscope" itemprop="publisher">
+								<span itemprop="name"><%= post.author %></span>
+								<span itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+									<meta itemprop="url" content="<%= theme.og_image %>">
+								</span>
+							</span>
+						</span>
 					</div>
-		<% } %><% if (post.categories.length){ %><%- partial('post/category') %>		
+		<% } %><% if (post.categories && post.categories.length){ %><%- partial('post/category') %>		
 				</div><% } else { %>		</div><% } %>
 				<div class="article-inner">
+					<div itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+						<meta itemprop="url" content="<%= theme.og_image %>">
+					</div>
 					<div class="article-entry" itemprop="articleBody">
 <% if (post.excerpt && index){ %><%- post.excerpt %>
 <% if (theme.excerpt_link){ %>						<p class="article-more-link">
