--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -10,6 +10,6 @@
 								</div><% } if (!(index) && !(page.archive)) { %>
 						<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
 							<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
-							<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time>
+							<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time><span itemprop="dateModified" content="<%= date_xml(post.updated) %>>"</span>
 						</a>
 					</div><% } %>
