--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,15 +1,21 @@
 <% if (post.link){ %>
-	<h1 itemprop="name" class="blog-post-title">
+	<span itemprop="mainEntityOfPage">
+		<h1 itemprop="name headline" class="blog-post-title">
 <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title || '(no title)' %></a>
 </h1>
+</span>
 <% } else { %><% if (index){ %>
-								<h1 itemprop="name" class="blog-post-title">
-									<a class="<%= class_name %>" href="<%- url_for(post.path) %>">
-										<%= post.title || '(no title)' %>
-									</a>
-								</h1>
+								<span itemprop="mainEntityOfPage">
+									<h1 itemprop="name headline" class="blog-post-title">
+										<a class="<%= class_name %>" href="<%- url_for(post.path) %>">
+											<%= post.title || '(no title)' %>
+										</a>
+									</h1>
+								</span>
 								<% } else { %>
-						<h1 class="<%= class_name %> blog-post-title" itemprop="name">
-							<%= post.title || '(no title)' %>
-						</h1>
+						<span itemprop="mainEntityOfPage">
+							<h1 class="<%= class_name %> blog-post-title" itemprop="name headline">
+								<%= post.title || '(no title)' %>
+							</h1>
+						</span>
 						<% } %><% } %>
