--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -9,7 +9,7 @@
 	</header>
 	<div class="container">
 	    <div class="row">
-        	<main class="col-sm-8 blog-main" itemscope itemtype="http://schema.org/Article">
+        	<main class="col-sm-8 blog-main">
         		<%- body %>
         	</main>
 			<aside class="col-sm-3 col-sm-offset-1 blog-sidebar">
