--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -9,7 +9,7 @@
 				</section><% } %><% } %><% if (page.total > 1){ %>
 <div id="page-nav">
 	<%- bs_paginator({
-		prev_text: __('previous'),
+		prev_text: __('prev'),
 		next_text: __('next')
 	}) %>
 </div><% } %>
