--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -7,7 +7,7 @@
 							<span itemtype="https://schema.org/Organization" itemscope="itemscope" itemprop="publisher">
 								<span itemprop="name"><%= post.author %></span>
 								<span itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-									<meta itemprop="url" content="<%= theme.og_image %>">
+									<meta itemprop="url" content="<%= theme.og_image_url %>">
 								</span>
 							</span>
 						</span>
@@ -16,7 +16,7 @@
 				</div><% } else { %>		</div><% } %>
 				<div class="article-inner">
 					<div itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
-						<meta itemprop="url" content="<%= theme.og_image %>">
+						<meta itemprop="url" content="<%= theme.og_image_url %>">
 					</div>
 					<div class="article-entry" itemprop="articleBody">
 <% if (post.excerpt && index){ %><%- post.excerpt %>
