--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -20,7 +20,7 @@
 	<%- meta_maker() %>
 	<% if (theme.rss){ %><link rel="alternate" href="<%- url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml"><% } %>
 	<% if (theme.favicon){ %><link rel="icon" href="<%- url_for(theme.favicon) %>?<%- date_xml(Date.now()) %>"><% } %>
-	<% if (config.highlight.enable){ %><link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css"><% } %>
+	<% if (config.highlight.enable){ %><link href="//fonts.googleapis.com/css?family=Source+Code+Pro|Jura" rel="stylesheet" type="text/css"><% }else{ %><link href="//fonts.googleapis.com/css?family=Jura" rel="stylesheet" type="text/css"><% } %>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<%- css('css/style.css?'+date_xml(Date.now())) %>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
