--- a/layout/_partial/masthead.ejs
+++ b/layout/_partial/masthead.ejs
@@ -1,4 +1,6 @@
 <div class="blog-header container">
-			<h1 class="blog-title"><%= config.title %></h1>
+			<a href="<%- config.root %>">
+				<h1 class="blog-title text-uppercase"><%= config.title %></h1>
+			</a>
 	<% if (theme.subtitle){ %>		<p class="lead blog-description"><%= theme.subtitle %></p><% } %>
 		</div>
