--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,7 +1,7 @@
 <% if (post.link){ %>
 	<span itemprop="mainEntityOfPage">
 		<h1 itemprop="name headline" class="blog-post-title">
-<a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title || '(no title)' %></a>
+<a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title || 'Untitled' %></a>
 </h1>
 </span>
 <% } else { %><% if (index){ %>
