--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -1,15 +1,9 @@
 <div class="article-datetime"><% if (page.archive){ %>
-									<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
-										<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
-										<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time>
-									</a><% } %><% if (index && !(page.archive)){ %>
-									<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
-										<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
-										<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time>
-									</a>
+									<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
+									<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time><% } %><% if (index && !(page.archive)){ %>
+									<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
+									<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time>
 								</div><% } if (!(index) && !(page.archive)) { %>
-						<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
-							<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
-							<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time><span itemprop="dateModified" content="<%= date_xml(post.updated) %>>"</span>
-						</a>
-					</div><% } %>
+						<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
+						<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time><span itemprop="dateModified" content="<%= date_xml(post.updated) %>>"</span>
+						</div><% } %>
