--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -26,16 +26,8 @@
 					<footer class="article-footer">
 						<a data-url="<%- post.permalink %>" data-id="<%= post._id %>" class="article-share-link">
 							<i class="fa fa-share"></i> Share
-						</a><% if (post.comments && config.disqus_shortname){ %>
-    <a href="<%- post.permalink %>#disqus_thread" class="article-comment-link">
-      <i class="fa fa-comment"></i> Comments
-    </a><% } %><%- partial('post/tag') %>
+						</a><%- partial('post/tag') %>
     				</footer>
 				</div><% if (!index){ %>
 <%- partial('post/nav') %><% } %>
-				</article><% if (!index && post.comments && config.disqus_shortname){ %>
-<section id="comments">
-  <div id="disqus_thread">
-    <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </div>
-</section><% } %>
+				</article>
