--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -1,8 +1,1 @@
-<% if (page.toc){ %><div class="sidebar-module sidebar-toc">
-					<h4>Table of Contents</h4>
-					<%- toc(page.content,{
-						class: 'sidebar-module-list',
-						headings: 'h1, h2, h3'
-					}) %>
-				</div>
-				<% } %><% theme.widgets.forEach(function(widget){ %><%- partial('../_widget/' + widget) %><% }) %>
+<% theme.widgets.forEach(function(widget){ %><%- partial('../_widget/' + widget) %><% }) %>
