--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -17,6 +17,7 @@
 	  } else if (is_tag()){
 	    title = 'Tag: ' + page.tag;}
 	%>
+	<title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
 	<%- meta_maker() %>
 	<% if (theme.rss){ %><link rel="alternate" href="<%- url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml"><% } %>
 	<% if (theme.favicon){ %><link rel="icon" href="<%- url_for(theme.favicon) %>?<%- date_xml(Date.now()) %>"><% } %>
