--- a/layout/_partial/post/nav.ejs
+++ b/layout/_partial/post/nav.ejs
@@ -2,12 +2,12 @@
 	<% if (post.next){ %>				<li role="presentation">
 						<a href="<%- url_for(post.next.path) %>" id="article-nav-older" class="btn btn-outline-primary">
 							<i class="fa fa-chevron-left pull-left"></i>
-							<span class="article-nav-link-title"><%= post.next.title || '(no title)' %></span>
+							<span class="article-nav-link-title"><%= post.next.title.substring(0,42)+"..." || '(no title)' %></span>
 						</a>
 					</li><% } %><% if (post.prev){ %>
 						<li role="presentation">
 							<a href="<%- url_for(post.prev.path) %>" id="article-nav-newer" class="btn btn-outline-primary">
-								<span class="article-nav-link-title"><%= post.prev.title || '(no title)' %></span>
+								<span class="article-nav-link-title" ><%= post.prev.title.substring(0,42)+"..." || '(no title)' %></span>
 								<i class="fa fa-chevron-right pull-right"></i>
 							</a>
 						</li><% } %>
