--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -6,4 +6,5 @@
 								</div><% } if (!(index) && !(page.archive)) { %>
 						<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" content="<%= date_xml(post.date) %>"><%= date(post.date, config.date_format) %></time>
 						<time datetime="<%= date_xml(post.date) %>"><%= date(post.date, config.time_format) %></time><span itemprop="dateModified" content="<%= date_xml(post.updated) %>>"</span>
-						</div><% } %>
+					</div>
+		<% } %>
